# modern-cpp-for-cv

./: .gitignore  README.md
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_1/task_2/src/: CMakeLists.txt
homework_2/: CMakeLists.txt  build.sh
homework_2/cmake/: ClangFormat.cmake
homework_2/src/: main.cpp
homework_2/task_1/: CMakeLists.txt  build.sh
homework_2/task_1/src/: main.cpp
homework_2/task_2/: CMakeLists.txt  main.cpp
homework_3/: CMakeLists.txt  build.sh
homework_3/api/: homework_3.h
homework_3/src/: CMakeLists.txt  create_image_browser.cpp  html_writer.cpp  image_browser.cpp  main.cpp
homework_3/web_app/: test.html
homework_4/: CMakeLists.txt  build.sh
homework_4/include/: homework_4.h
homework_4/include/ipb/: algorithm.hpp  container.hpp  named_vector.hpp
homework_4/src/: CMakeLists.txt  ipb_algorithm.cpp  main.cpp
homework_4/tests/: CMakeLists.txt
homework_5/: .gitignore  CMakeLists.txt  build.sh
homework_5/include/: convert_dataset.hpp  homework_5.h
homework_5/src/: CMakeLists.txt  convert_dataset.cpp  main.cpp  serialize.cpp
homework_5/tests/: sifts_internal.cpp  sifts_internal.hpp  test_convert_dataset.cpp  test_serialize.cpp  utils.hpp
homework_6/: .gitignore  CMakeLists.txt  build.sh
homework_6/include/: homework_6.h
homework_6/io_tools/: CMakeLists.txt  io_tools.cpp
homework_6/src/: CMakeLists.txt  image.cpp
homework_7/: CMakeLists.txt  build.sh
homework_7/include/: bow_dictionary.hpp  homework_7.h  kmeans.hpp  serialize.hpp
homework_7/src/: CMakeLists.txt  bow_dictionary.cpp  convert_dataset.cpp  kmeans.cpp  serialize.cpp
homework_7/tests/: CMakeLists.txt  test_bow_dictionary.cpp  test_data.cpp  test_data.hpp  test_kmeans.cpp  test_utils.hpp
homework_8/task_1/: CMakeLists.txt  build.sh  stack_limit.cpp  test_stack_limit.sh
homework_8/task_2/: CMakeLists.txt  build.sh
homework_8/task_2/include/: homework_8.h  image.hpp
homework_8/task_2/include/io_strategies/: png_strategy.hpp  ppm_strategy.hpp  strategy.hpp
homework_8/task_2/src/: CMakeLists.txt  image.cpp  png_strategy.cpp  ppm_strategy.cpp
homework_8/task_2/tests/: CMakeLists.txt  test_from_png.cpp  test_from_ppm.cpp
homework_9/: CMakeLists.txt  build.sh
homework_9/include/: bow_dictionary.hpp  histogram.hpp  homework_9.h  kmeans.hpp
homework_9/src/: CMakeLists.txt  bow_dictionary.cpp  histogram.cpp
homework_9/tests/: CMakeLists.txt  test_data.cpp  test_data.hpp  test_dictionary.cpp
lecture_0/: .gitignore
lecture_0/linux_example/: main.cpp
lecture_1/: .gitignore
lecture_1/my_library/: CMakeLists.txt  main.cpp  tools.cpp  tools.hpp
lecture_2/: c_strings.cpp  input_params.cpp  sstream_demo.cpp  string.cpp  strok.cpp
lecture_3/: default_arguments.cpp  func_return_local_bug.cpp  inline.cpp  local_variables.cpp
lecture_4/: print.cpp
lecture_5/: CMakeLists.txt  build.sh
lecture_5/inputs/: test_bel.txt  test_cols.txt
lecture_5/src/: CMakeLists.txt  any.cpp  chrono.cpp  directory_iterator.cpp  exists.cpp  extension_part1.cpp  extension_part2.cpp  filename_part1.cpp  filename_part2.cpp  fstream.cpp  getline.cpp  ifstream_binary.cpp  move.cpp  ofstream.cpp  ofstream_binary.cpp  optional.cpp  ostream_ascii.cpp  stem.cpp  swap.cpp  tuple.cpp  variant.cpp
lecture_6/: CMakeLists.txt  build.sh
lecture_6/include/: counted.hpp  point.hpp
lecture_6/src/: CMakeLists.txt  constructor.cpp  constructors_operators.cpp  counted.cpp  declaration_definition.cpp  enum.cpp  initialize.cpp  insertion.cpp  minor.cpp  move.cpp  point.cpp  setting_getting.cpp  struct.cpp  using.cpp
lecture_7/: CMakeLists.txt  build.sh
lecture_7/inheritance_example/: inheritance_example.c  inheritance_example.cpp
lecture_7/singleton_pattern/: singleton.cpp
lecture_7/src/: CMakeLists.txt  crpt_pattern.cpp  interfaces.cpp  public_inheritance.cpp  runtime_polymorphism.cpp  singleton.cpp  strategy.cpp
lecture_7/strategy_pattern/config/: dloam.yaml  narf.yaml  narf_dloam.yaml  narf_pcl.yaml  pcl.yaml
lecture_7/strategy_pattern/nodes/: DLOAM.cpp  NARF_ICP.cpp  PCL_ICP.cpp  registration.hpp
lecture_7/strategy_pattern/src/: dloam_icp.cpp  dloam_icp.hpp  icp_strategy.hpp  narf_icp.cpp  narf_icp.hpp  pcl_icp.cpp  pcl_icp.hpp
lecture_8/: CMakeLists.txt
lecture_8/src/: CMakeLists.txt  dangling_pointer_example.cpp  heap_memory.cpp  memory_leak_delete.cpp  memory_leak_example.cpp  overflow.cpp  pointer_deferencing.cpp  polymorphism.cpp  raii_example.cpp  shared_ptr.cpp  stack_memory.cpp  typical_beginner_error.cpp  uninitialized_pointer.cpp
lecture_9/: CMakeLists.txt
lecture_9/src/: CMakeLists.txt  constexpr.cpp  function_templates.cpp  template_classes.cpp  template_full_specialization.cpp  template_parameters.cpp  template_partial_specialization.cpp  type_deduction.cpp  type_deduction_puzzle.cpp
tutorial_opencv/: CMakeLists.txt  build.sh
tutorial_opencv/src/: CMakeLists.txt  copy.cpp  exr.cpp  imread.cpp  imshow.cpp  imwrite.cpp  mix.cpp  vec.cpp
