add_executable(any any.cpp)
add_executable(ascii ascii.cpp)
add_executable(binary binary.cpp)
add_executable(chrono chrono.cpp)
add_executable(directory_iterator directory_iterator.cpp)
add_executable(exists exists.cpp)
add_executable(extension_part1 extension_part1.cpp)
add_executable(extension_part2 extension_part2.cpp)
add_executable(filename_part1 filename_part1.cpp)
add_executable(filename_part2 filename_part2.cpp)
add_executable(fstream fstream.cpp)
add_executable(getline getline.cpp)
add_executable(move move.cpp)
add_executable(ofstream ofstream.cpp)
add_executable(ofstream_binary ofstream_binary.cpp)
add_executable(optional optional.cpp)
add_executable(read read.cpp)
add_executable(stem stem.cpp)
add_executable(swap swap.cpp)
add_executable(tuple tuple.cpp)
add_executable(variant variant.cpp)
