include_directories(../include)
add_executable(constructor constructor.cpp)
add_executable(constructors_operators constructors_operators.cpp)
add_executable(counted counted.cpp)
add_executable(declaration_definition declaration_definition.cpp)
add_executable(initialize initialize.cpp)
add_executable(insertion insertion.cpp)
add_executable(minor minor.cpp)
add_executable(move move.cpp)
add_executable(point point.cpp)
add_executable(setting_getting setting_getting.cpp)
add_executable(struct struct.cpp)
add_executable(using using.cpp)
