add_executable(dangling_pointer_example dangling_pointer_example.cpp)
add_executable(heap_memory heap_memory.cpp)
add_executable(memory_leak_delete memory_leak_delete.cpp)
add_executable(memory_leak_example memory_leak_example.cpp)
add_executable(overflow overflow.cpp)
add_executable(pointer_deferencing pointer_deferencing.cpp)
add_executable(polymorphism polymorphism.cpp)
add_executable(polymorphism_smart_pointers polymorphism_smart_pointers.cpp)
add_executable(raii_example raii_example.cpp)
add_executable(shared_ptr shared_ptr.cpp)
add_executable(stack_memory stack_memory.cpp)
add_executable(typical_beginner_error typical_beginner_error.cpp)
add_executable(uninitialized_pointer uninitialized_pointer.cpp)
