add_executable(copy copy.cpp)
target_link_libraries(copy ${OpenCV_LIBS})
add_executable(exr exr.cpp)
target_link_libraries(exr ${OpenCV_LIBS})
add_executable(imread imread.cpp)
target_link_libraries(imread ${OpenCV_LIBS})
add_executable(imshow imshow.cpp)
target_link_libraries(imshow ${OpenCV_LIBS})
add_executable(imwrite imwrite.cpp)
target_link_libraries(imwrite ${OpenCV_LIBS})
add_executable(mix mix.cpp)
target_link_libraries(mix ${OpenCV_LIBS})
add_executable(vec vec.cpp)
target_link_libraries(vec ${OpenCV_LIBS})
